2003-07-10  Ethan Merritt <merritt@u.washington.edu>

	* term/x11.trm: Gnuplot disables mousing if it thinks the 
	controlling terminal is not interactive. In this case X11_graphics()
	must not attempt to wait for a mouse event during initialization
	[Fixes reported bug that first character of input line can be lost].

2003-07-07  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c: Detect request for illegal window number and
	treat it as window number 0.

	* term/x11.trm: Detect missing font name during "set term x11".

	* src/command.c: Add missing line from what should have been a
	patch too trivial for me to mess up (do_string).

2003-07-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (do_string_replot): Minor simplification: use
 	gp_strdup() to duplicate current input_line string.  Add some
	blanks as per CodeStyle document.
	(do_string): Likewise.

2003-07-04  Ethan Merritt <merritt@u.washington.edu>

	* src/command.c: Rewrite do_string() and do_string_replot() so
 	that no memory corruption occurs if extend_input_line() triggers a
 	realloc(<xxx>,input_line) during processing.

	* term/x11.trm: Font requests to a remote X-server are very slow;
 	track font used for most recent text placement and only send a
 	font request if the current text font is different from the
 	previous one.

	* src/gplt_x11.c: Collect sequential vector draws into a single
 	polyline before sending it to the X-server. This makes wide lines
 	smoother, and gives a small speed improvement for remote displays.

	* src/graphics.c: Replace problematic adjustment of key placement
 	below plot with a better one.

2003-07-02  Ethan Merritt <merritt@u.washington.edu>

	* src/mouse.c: DU4.0 cc compiler does not automatically promote
 	argument of sqrt to (double), so change it to double explicitly.

	* demos/arrowstyle.dem, demos/vector.dem: Show more of what the
 	`plot with vectors <arrowstyle>` option can do.
