@@ -1,5 +1,5 @@
 /*
- * $Id: gp_types.h,v 1.16 2002/09/27 00:12:24 sfeam Exp $
+ * $Id: gp_types.h,v 1.17 2003/07/16 04:17:32 sfeam Exp $
  */
 
 /* GNUPLOT - gp_types.h */
@@ -65,36 +65,35 @@ enum PLOT_TYPE {
 typedef enum e_PLOT_STYLE_FLAGS {
     PLOT_STYLE_HAS_LINE      = (1<<0),
     PLOT_STYLE_HAS_POINT     = (1<<1),
-    PLOT_STYLE_HAS_ERRORBAR  = (1<<2)
+    PLOT_STYLE_HAS_ERRORBAR  = (1<<2),
+    PLOT_STYLE_HAS_BOXES     = (1<<3),
+    PLOT_STYLE_BITS          = (1<<4)
 } PLOT_STYLE_FLAGS;
 
 typedef enum PLOT_STYLE {
-    LINES        =  0*(1<<3) + PLOT_STYLE_HAS_LINE,
-    POINTSTYLE   =  1*(1<<3) + PLOT_STYLE_HAS_POINT,
-    IMPULSES     =  2*(1<<3) + PLOT_STYLE_HAS_LINE,
-    LINESPOINTS  =  3*(1<<3) + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_LINE),
-    DOTS         =  4*(1<<3) + 0,
-    XERRORBARS   =  5*(1<<3) + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
-    YERRORBARS   =  6*(1<<3) + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
-    XYERRORBARS  =  7*(1<<3) + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
-    BOXXYERROR   =  8*(1<<3) + PLOT_STYLE_HAS_LINE,
-    BOXES        =  9*(1<<3) + PLOT_STYLE_HAS_LINE,
-    BOXERROR     = 10*(1<<3) + PLOT_STYLE_HAS_LINE,
-    STEPS        = 11*(1<<3) + PLOT_STYLE_HAS_LINE,
-    FSTEPS       = 12*(1<<3) + PLOT_STYLE_HAS_LINE,
-    HISTEPS      = 13*(1<<3) + PLOT_STYLE_HAS_LINE,
-    VECTOR       = 14*(1<<3) + PLOT_STYLE_HAS_LINE,
-    CANDLESTICKS = 15*(1<<3) + PLOT_STYLE_HAS_ERRORBAR,
-    /* FIXME HBB 20010214: shouldn't fincancebars have ERRORBARS set?
-     * They behave very much like errorbars, with the sole
-     * exception of the key entry ... */
-    FINANCEBARS  = 16*(1<<3) + PLOT_STYLE_HAS_LINE,
-    XERRORLINES  = 17*(1<<3) + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
-    YERRORLINES  = 18*(1<<3) + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
-    XYERRORLINES = 19*(1<<3) + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR)
+    LINES        =  0*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    POINTSTYLE   =  1*PLOT_STYLE_BITS + PLOT_STYLE_HAS_POINT,
+    IMPULSES     =  2*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    LINESPOINTS  =  3*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_LINE),
+    DOTS         =  4*PLOT_STYLE_BITS + 0,
+    XERRORBARS   =  5*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
+    YERRORBARS   =  6*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
+    XYERRORBARS  =  7*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
+    BOXXYERROR   =  8*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_BOXES),
+    BOXES        =  9*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_BOXES),
+    BOXERROR     = 10*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_BOXES),
+    STEPS        = 11*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    FSTEPS       = 12*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    HISTEPS      = 13*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    VECTOR       = 14*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    CANDLESTICKS = 15*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_ERRORBAR | PLOT_STYLE_HAS_BOXES),
+    FINANCEBARS  = 16*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    XERRORLINES  = 17*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
+    YERRORLINES  = 18*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR),
+    XYERRORLINES = 19*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_POINT | PLOT_STYLE_HAS_ERRORBAR)
 #ifdef PM3D
-    , FILLEDCURVES = 21*(1<<3) + PLOT_STYLE_HAS_LINE
-    , PM3DSURFACE  = 22*(1<<3) + 0
+    , FILLEDCURVES = 21*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE
+    , PM3DSURFACE  = 22*PLOT_STYLE_BITS + 0
 #endif
 } PLOT_STYLE;
 
