@@ -1,3 +1,9 @@
+2003-07-15  Ethan Merritt <merritt@u.washington.edu>
+
+	* src/gp_types.h src/graphics.c src/plot2d.c: Create a new flag
+	PLOT_STYLE_HAS_BOXES and use this to trigger filled-box processing
+	rather than testing individually for all plot styles that use it.
+
 2003-07-10  Ethan Merritt <merritt@u.washington.edu>
 
 	* term/x11.trm: Gnuplot disables mousing if it thinks the 
